--- a/src/com/ulatina/grupo5/vista/Ganancias_Admin_Empleado.form
+++ b/src/com/ulatina/grupo5/vista/Ganancias_Admin_Empleado.form
@@ -232,10 +232,11 @@
         <Component class="javax.swing.JComboBox" name="ddlFiltroSec">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
-                <StringItem index="0" value="A"/>
-                <StringItem index="1" value="F"/>
-                <StringItem index="2" value="I"/>
+              <StringArray count="4">
+                <StringItem index="0" value="Todos"/>
+                <StringItem index="1" value="Infantil"/>
+                <StringItem index="2" value="Adultos"/>
+                <StringItem index="3" value="Familiar"/>
               </StringArray>
             </Property>
           </Properties>
