--- a/src/com/ulatina/grupo5/vista/BookeoView.form
+++ b/src/com/ulatina/grupo5/vista/BookeoView.form
@@ -319,7 +319,7 @@
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="1" rowCount="4">
-                    <Column editable="true" title="Usuario" type="java.lang.Object"/>
+                    <Column editable="true" title="Usuarios" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
